# raytracer

./: .gitignore  Cargo.toml  README.md  profile.json
.github/workflows/: ci.yml  rust.yml
src/: aabb.rs  bvh.rs  camera.rs  color.rs  hittable.rs  hittable_list.rs  interval.rs  main.rs  material.rs  ray.rs  rtw_image.rs  rtweekend.rs  sphere.rs  texture.rs  vec3.rs
