[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_dispatch = "0.3.12"
fastrand = "2.0.0"
image = "0.24.7"
rayon = "1.7.0"

[profile.release]
panic = "abort"
codegen-units = 1
